# im-one

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
apps/api/: README.md  openapi.json  pyproject.toml
apps/api/src/im_one_agent/: cli.py  database_backend.py  domain.py  env.py  evaluate.py  evidence.py  generate_demo_data.py  preflight.py  sample_data.py  schema_retrieval.py  sql_safety.py  web.py
apps/api/src/imax_api/: __init__.py  auth.py  config.py  database.py  expenses.py  knowledge.py  llm.py  main.py  schemas.py  security.py  supervisor.py
apps/api/src/imax_api/routers/: __init__.py  assistant.py  data.py  expenses.py  health.py  knowledge.py  sessions.py
apps/api/tests/: conftest.py  test_cli.py  test_demo_data_generator.py  test_env.py  test_prd_alignment.py  test_schema_and_generation.py  test_unified_api.py  test_web_exports.py
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  app-state.tsx  charting.ts  main.tsx  styles.css  types.ts
apps/web/src/components/: AssistantComposer.tsx  ChartView.tsx  Shell.tsx  VirtualTable.tsx
apps/web/src/pages/: DataPage.tsx  ExpensePage.tsx  HomePage.tsx  KnowledgePage.tsx
apps/web/tests/: api.test.ts  app.test.tsx  charting.test.ts
docs/: database_saas_ui_references.md  demo_script.md  im_bank_design_research.md  implementation_status.md  legacy-assets.md  poc_brief.md  prd.md
legacy/launcher/: app.py
legacy/launcher/templates/: index.html
legacy/manual/: BOND_MANUAL.xlsx  CLAUDE.md  REC_SUB.txt  app.py  bond_manual.md  meeting_room_manual.md
legacy/manual/templates/: index.html
legacy/root/: AGENTS.md  CLAUDE.md  STAGE_PROMPTS.md
legacy/rpa/: CLAUDE.md  PRD.md  app.py  expense_demo_data.json  j.html  requirements.txt
scripts/: dev.sh  export_openapi.py  generate_demo_data.py  start.sh
src/im_one_agent/: __init__.py  cli.py  conversation.py  domain.py  env.py  evaluation.py  evidence.py  export_utils.py  graph.py  intent_guard.py  preflight.py  response.py  sample_data.py  schema_retrieval.py  sql_generator.py  sql_safety.py  web.py
src/im_one_agent/static/: app.js  icons.js  index.html  layout.js  styles.css
tests/: test_intent_guard.py  test_prd_alignment.py  test_schema_and_generation.py  test_sql_safety.py  test_web_exports.py
(+1 files in other folders)
