[project]
name = "im-one-agent"
version = "0.1.0"
description = "Securities workflow NL2SQL agent POC with LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=1.0.0",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
im-one-agent = "im_one_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
