[project]
name = "imax-unified-agent"
version = "0.2.0"
description = "Unified securities workflow agents with FastAPI and LangGraph"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0,<1.0.0",
  "langgraph>=1.1.0,<2.0.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "python-multipart>=0.0.20",
  "sqlglot>=25.0.0",
  "typing-extensions>=4.12.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.25.0",
]

[project.scripts]
im-one-agent = "im_one_agent.cli:main"
imax-api = "imax_api.main:run"
im-one-agent-evaluate = "im_one_agent.evaluate:main"
im-one-agent-evidence = "im_one_agent.evidence:main"
im-one-agent-preflight = "im_one_agent.preflight:main"
im-one-agent-generate-data = "im_one_agent.generate_demo_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
